infrastructure/03-apps/opencloud/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opencloud
  namespace: opencloud
spec:
  selector:
    app: opencloud
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9200
