infrastructure/03-apps/opencloud/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opencloud
  namespace: opencloud
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: traefik
  rules:
  - host: drive.tomlab.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: opencloud
            port:
              number: 80
  tls:
  - hosts:
    - drive.tomlab.fr
    secretName: opencloud-tls
